<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.norswap</groupId>
    <artifactId>autumn</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <description>A simple parsing library with context sensitivity support.</description>
    <url>https://github.com/norswap/${project.name}</url>
    <inceptionYear>2017</inceptionYear>

    <scm>
        <url>https://github.com/norswap/${project.name}</url>
        <connection>scm:git:git@github.com:norswap/${project.name}.git</connection>
        <developerConnection>${project.scm.connection}</developerConnection>
    </scm>

    <licenses>
        <license>
            <name>The BSD 3-Clause License</name>
            <url>${project.scm.url}/blob/master/LICENSE</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>norswap</id>
            <name>Nicolas LAURENT</name>
            <email>norswap@gmail.com</email>
            <url>http://norswap.com</url>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <!-- For Kotlin configuration information, see
         https://kotlinlang.org/docs/reference/using-maven.html -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>

                <!-- Source & bytecode *Java* versions. -->
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- Automatically download sources and javadoc for dependencies. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>download-sources</id>
                        <goals>
                            <goal>sources</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>download-javadoc</id>
                        <configuration>
                            <classifier>javadoc</classifier>
                        </configuration>
                        <goals>
                            <goal>resolve</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Enable source jar generation through Maven (package or source:jar). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Enable javadoc jar generation through Maven (package or javadoc:jar).
                 The site is also generated through package (in target/apidocs).
                 Generate the doc alone with javadoc:javadoc (in target/site/apidocs). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <!-- Otherwise Javadoc complains about modules. -->
                    <source>1.8</source>
                    <!-- Otherwise Javadoc chokes on missing @param, etc -->
                    <doclint>none</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Add "examples" to *test* sources. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>add-test-source</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>examples</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Enable± release to Github through Maven (github-release:release). -->
            <plugin>
                <groupId>de.jutzig</groupId>
                <artifactId>github-release-plugin</artifactId>
                <version>1.1.1</version>
                <configuration>
                    <releaseName>${project.version}</releaseName>
                    <overwriteArtifact>true</overwriteArtifact>
                    <description>Initial Release</description>
                    <tag>${project.version}</tag>
                    <fileSets>
                        <fileSet>
                            <directory>${project.build.directory}</directory>
                            <includes>
                                <include>${project.artifactId}*.jar</include>
                            </includes>
                        </fileSet>
                    </fileSets>
                </configuration>
            </plugin>

            <!-- Fatjar to be consumed by JVM applications (package). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>java-fatjar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.testng:testng</exclude>
                                    <exclude>com.beust:jcommander</exclude>
                                </excludes>
                            </artifactSet>
                            <relocations>
                                <relocation>
                                    <pattern>norswap.utils</pattern>
                                    <shadedPattern>norswap.autumn.shaded.utils</shadedPattern>
                                </relocation>
                            </relocations>
                            <!-- Strip dependencies to only used classes. -->
                            <minimizeJar>true</minimizeJar>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>fatjar</shadedClassifierName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>com.github.norswap</groupId>
            <artifactId>norswap-utils</artifactId>
            <version>85b2ac0800</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.auto.value</groupId>
            <artifactId>auto-value-annotations</artifactId>
            <version>1.6.2</version>
        </dependency>

        <dependency>
            <groupId>com.google.auto.value</groupId>
            <artifactId>auto-value</artifactId>
            <version>1.6.2</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

</project>
